src/objects/HD_Cust_ID__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HD Cust IDs</relationshipLabel>
        <relationshipName>HD_Cust_IDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apr_2013__c</fullName>
        <label>Apr 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_2014__c</fullName>
        <label>Apr 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_2015__c</fullName>
        <label>Apr 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_2013__c</fullName>
        <label>Aug 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_2014__c</fullName>
        <label>Aug 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_2015__c</fullName>
        <label>Aug 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dec_2013__c</fullName>
        <label>Dec 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_2014__c</fullName>
        <label>Dec 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_2015__c</fullName>
        <label>Dec 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_2013__c</fullName>
        <label>Feb 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_2014__c</fullName>
        <label>Feb 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_2015__c</fullName>
        <label>Feb 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HD_cust_ID_Backend__c</fullName>
        <label>HD cust ID Backend</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Jan_2013__c</fullName>
        <label>Jan 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_2014__c</fullName>
        <label>Jan 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_2015__c</fullName>
        <label>Jan 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_2013__c</fullName>
        <label>Jul 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_2014__c</fullName>
        <label>Jul 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_2015__c</fullName>
        <label>Jul 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_2013__c</fullName>
        <label>Jun 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_2014__c</fullName>
        <label>Jun 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_2015__c</fullName>
        <label>Jun 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mar_2013__c</fullName>
        <label>Mar 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_2014__c</fullName>
        <label>Mar 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_2015__c</fullName>
        <label>Mar 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_2013__c</fullName>
        <label>May 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_2014__c</fullName>
        <label>May 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_2015__c</fullName>
        <label>May 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Needs_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To determine which HD cust has been recently matched and needs added.  Workflow to update when moved from Generic Account DTP to a real account.  Batch job to then extract and upload all previous months.</description>
        <label>Needs Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nov_2013__c</fullName>
        <label>Nov 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_2014__c</fullName>
        <label>Nov 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_2015__c</fullName>
        <label>Nov 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_2013__c</fullName>
        <label>Oct 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_2014__c</fullName>
        <label>Oct 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_2015__c</fullName>
        <label>Oct 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone_1__c</fullName>
        <description>Phone # 1 on the POS upload page</description>
        <label>Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_1_clean__c</fullName>
        <description>a clean phone # for matching no dashes</description>
        <label>Phone 1 clean</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <description>Phone 2 in POS file</description>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_2_clean__c</fullName>
        <label>Phone 2 clean</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sep_2013__c</fullName>
        <label>Sep 2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_2014__c</fullName>
        <label>Sep 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_2015__c</fullName>
        <label>Sep 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sign_Up_Date__c</fullName>
        <label>Sign Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Sales__c</fullName>
        <formula>X2013__c + X2014__c +  X2015__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013__c</fullName>
        <formula>Apr_2013__c + Aug_2013__c + Dec_2013__c + Feb_2013__c + Jul_2013__c + Jun_2013__c + Mar_2013__c + May_2013__c + Nov_2013__c + Oct_2013__c + Sep_2013__c + Jan_2013__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2013</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014__c</fullName>
        <formula>Apr_2014__c + Aug_2014__c + Dec_2014__c + Feb_2014__c + Jul_2014__c + Jun_2014__c + Mar_2014__c + May_2014__c + Nov_2014__c + Oct_2014__c + Sep_2014__c + Jan_2014__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015__c</fullName>
        <formula>Apr_2015__c + Aug_2015__c + Dec_2015__c + Feb_2015__c + Jul_2015__c + Jun_2015__c + Mar_2015__c + May_2015__c + Nov_2015__c + Oct_2015__c + Sep_2015__c + Jan_2015__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>HD Cust ID</label>
    <nameField>
        <label>HD Cust ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HD Cust IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>